# Tiktok-Automation

./: .gitignore  README.md
HaizFlow/: .editorconfig  .env.example  .gitattributes  .gitignore  HaizFlow.spec  NOTICE  dependency-lock-manifest.json  haizflow_desktop.py  pyproject.toml  requirements-build.in  requirements-lock-py313-win64.txt  requirements.txt
HaizFlow/docs/: architecture.md  release-readiness.md
HaizFlow/licenses/: DOUYIN-CHANNEL-IMPORT-NOTICE.md  FFmpeg-NOTICE.md  HY-MT2-NOTICE.md
HaizFlow/runtime/: ffmpeg-manifest.json
HaizFlow/scripts/: build-exe.ps1  download_ffmpeg.py  finalize-release.py  generate-third-party-notices.py  install-desktop-env.ps1  lock-dependencies.ps1  prepare-cpu-model.py  prepare-gpu-model.py  prepare-offline-models.ps1  prepare-whisper-model.py  run-desktop.ps1  run_pipeline_test.py  smoke-test-frozen.ps1  test-ffmpeg-runtime.py  test.ps1  verify-dependency-lock.py  verify-runtime.py
HaizFlow/src/haizflow/: __init__.py  config.py  main.py
HaizFlow/src/haizflow/core/: events.py  file_lock.py  hardware.py  logging_config.py  model_integrity.py  paths.py  release_smoke.py  runtime_probe.py
HaizFlow/test/: test_audio_source_modes.py  test_batch_import.py  test_channel_import.py  test_cpu_runtime.py  test_dependency_lock.py  test_gpu_recovery.py  test_metadata_recovery.py  test_mixed_language_pipeline.py  test_model_integrity.py  test_multi_project_controller.py  test_portable_paths.py  test_processing_queue.py  test_project_grouping.py  test_qml_channel_import.py  test_qml_menu.py  test_restart_semantics.py  test_runtime_probe.py  test_single_instance.py  test_thumbnail_source.py  test_timeline_render.py  test_tts_reliability.py  test_ui_localization.py  test_video_download.py
auto-dub-video-local/: .env.example  .gitignore  README.md  README.vi.md  autodub_desktop.py  desktop_app.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run-dev-all.js  system_improvement_suggestions.md
auto-dub-video-local/backend/: .env.example  Dockerfile  download_ffmpeg.py  download_test_video.py  package.json  requirements.txt  run-dev.js  run_test.py
auto-dub-video-local/backend/app/: config.py  job_store.py  main.py  models.py
auto-dub-video-local/docs/: architecture.md
auto-dub-video-local/frontend/: Dockerfile  index.html
auto-dub-video-local/frontend/src/: App.tsx  api.ts  index.css
auto-dub-video-local/scripts/: build-exe.ps1  download_ffmpeg.py  download_test_video.py  install-desktop-env.ps1  migrate-runtime-data.ps1  run-desktop.ps1  run_pipeline_test.py  verify-runtime.py
auto-dub-video-local/src/autodub/: config.py  main.py
auto-dub-video-local/test/: test_batch_import.py  test_cpu_runtime.py  test_gpu_recovery.py  test_mixed_language_pipeline.py  test_multi_project_controller.py  test_project_grouping.py  test_thumbnail_source.py  test_tts_reliability.py  test_video_download.py
(+182 files in other folders)
