[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "haizflow"
version = "0.1.0"
description = "Free, local-first desktop video dubbing and automation for Windows"
requires-python = ">=3.11,<3.14"
dependencies = [
  "PySide6==6.11.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "packaging==26.2",
  "torch==2.8.0+cu128",
  "torchaudio==2.8.0+cu128",
  "torchvision==0.23.0+cu128",
  "whisperx==3.8.6",
  "pyannote-audio==4.0.7",
  "torchcodec==0.7.0",
  "transformers==4.57.6",
  "accelerate==1.14.0",
  "llama-cpp-python==0.3.34",
  "ctranslate2==4.8.1",
  "faster-whisper==1.2.1",
  "numpy==2.5.1",
  "pandas==3.0.3",
  "audioop-lts==0.2.2; python_version >= '3.13'",
  "edge-tts==7.2.8",
  "yt-dlp==2026.7.4",
  "pydub==0.25.1",
  "srt==3.5.3",
  "demucs==4.0.1",
  "pyinstaller==6.21.0",
]

[project.scripts]
haizflow = "haizflow.desktop.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"haizflow.desktop" = ["qml/*.qml", "qml/qmldir"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
llama-cpp-python = { index = "llama-cpp-cpu" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
