[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodub-video-local"
version = "0.1.0"
description = "Local-first desktop video dubbing pipeline for Windows"
requires-python = ">=3.11,<3.14"
dependencies = [
  "PySide6==6.11.1",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "packaging==26.2",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "whisperx==3.8.6",
  "pyannote-audio==4.0.7",
  "torchcodec==0.7.0",
  "transformers==4.57.6",
  "accelerate==1.14.0",
  "llama-cpp-python==0.3.34",
  "ctranslate2==4.8.1",
  "faster-whisper==1.2.1",
  "numpy==2.5.1",
  "pandas==3.0.3",
  "audioop-lts==0.2.2; python_version >= '3.13'",
  "edge-tts==7.2.8",
  "yt-dlp==2026.7.4",
  "pydub==0.25.1",
  "srt==3.5.3",
  "demucs==4.0.1",
  "pyinstaller==6.21.0",
]

[project.scripts]
autodub-desktop = "autodub.desktop.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autodub.desktop" = ["qml/*.qml", "qml/qmldir"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
